--- a/details.html
+++ b/details.html
@@ -22,8 +22,10 @@
   <script src="js/jquery-3.7.1.js"></script>
   <script src="js/headerFooter.js"></script>
 
-  <style>
-
+  <style> 
+ #mobileFooter{
+    display: none !important;
+  }
   </style>
 </head>
 
