--- a/dashBoard/dashboard.html
+++ b/dashBoard/dashboard.html
@@ -5,17 +5,17 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Crew dogs</title>
-  <link href="css/bootstrap.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
-  <link href="css/menu.css" rel="stylesheet">
+  <link href="../css/bootstrap.css" rel="stylesheet">
+  <link href="../css/style.css" rel="stylesheet">
+  <link href="../css/menu.css" rel="stylesheet">
 
-  <link href="css/slick-slider.css" rel="stylesheet">
+  <link href="../css/slick-slider.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="css/s-custom.css">
-  <link rel="stylesheet" href="css/scrollbar.css">
-  <link rel="stylesheet" href="css/fonts.css">
-  <link rel="stylesheet" href="css/message.css">
+  <link rel="stylesheet" href="../css/s-custom.css">
+  <link rel="stylesheet" href="../css/scrollbar.css">
+  <link rel="stylesheet" href="../css/fonts.css">
+  <link rel="stylesheet" href="../css/message.css">
   <link
     href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
     rel="stylesheet">
@@ -66,7 +66,7 @@
           <header class="d-flex flex-wrap align-items-center justify-content-between justify-content-md-between py-2">
             <div class="col-md-3 mb-md-0 ">
               <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-                <img src="img/logo.png" alt="">
+                <img src="../img/logo.png" alt="">
               </a>
             </div>
             <div class="col-md-3 gap-2 d-flex justify-content-end">
@@ -76,11 +76,11 @@
        </ul> -->
               <!--menu items-->
               <div class="d-flex gap-3 align-items-center">
-                <p class="help-text mb-0 pb-1 link-not-active link-active " style="color: #444444;">Dashboard</p>
-                <p class="help-text mb-0 pb-1 link-not-active" style="color: #444444;">Bookings</p>
-                <p class="help-text mb-0 pb-1 link-not-active" style="color: #444444;">Calendar</p>
-                <p class="help-text mb-0 pb-1 link-not-active" style="color: #444444;">Listings</p>
-                <p class="help-text mb-0 pb-1 link-not-active" style="color: #444444;">Inbox</p>
+                <a href="#" class="help-text mb-0 pb-1 link-not-active link-active " style="color: #444444;">Dashboard</a>
+                <a href="booking.html" class="help-text mb-0 pb-1 link-not-active " style="color: #444444;">Bookings</a>
+                <a href="#" class="help-text mb-0 pb-1 link-not-active" style="color: #444444;">Calendar</a>
+                <a href="#" class="help-text mb-0 pb-1 link-not-active" style="color: #444444;">Listings</a>
+                <a href="#" class="help-text mb-0 pb-1 link-not-active" style="color: #444444;">Inbox</a>
                 <div class="mobile-display-none" style="cursor: pointer;" onclick="toggleNotification()">
                   <svg class="not-selected" style="display: block;" xmlns="http://www.w3.org/2000/svg" width="18"
                     height="21" viewBox="0 0 18 21" fill="none">
@@ -100,7 +100,7 @@
               <div class="dropdown" >
                 <button class=" d-flex gap-1 align-items-center  dropdown" style="border: none; background-color: white;" type="button" data-bs-toggle="dropdown"
                   aria-expanded="false">
-                  <img src="img/people.jpg" style="width: 30px; height: 30px; border-radius: 50%;" alt="">
+                  <img src="../img/people.jpg" style="width: 30px; height: 30px; border-radius: 50%;" alt="">
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="8" viewBox="0 0 16 8" fill="none">
                     <path d="M1 7H15M1 1H15" stroke="#121212" stroke-width="1.5" stroke-linecap="round"/>
                   </svg>
@@ -183,10 +183,10 @@
 
 
 
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="./script.js"></script>
-  <script src="js/jquery-3.7.1.js"></script>
-  <script src="js/headerFooter.js"></script>
+  <script src="../js/bootstrap.bundle.min.js"></script>
+  <script src="../script.js"></script>
+  <script src="../js/jquery-3.7.1.js"></script>
+  <script src="../js/headerFooter.js"></script>
 
 </body>
 
