--- a/dashBoard/booking.html
+++ b/dashBoard/booking.html
@@ -62,6 +62,7 @@
       display: flex;
       align-items: center;
       gap: 3px;
+      min-width: fit-content;
     }
 
     .activeblu {
@@ -118,6 +119,9 @@
       color: #acacb0;
       fill: var(--Grayscale-Gray-60, #ACACB0);
     }
+    .max-w {
+      max-width: 1550px;
+    }
 
     @media (max-width:700px) {
       #profile-mobile-version {
@@ -127,6 +131,13 @@
       .profile-desktop-version {
         display: none !important;
       }
+      .overflow {
+        margin-right: 0px !important;
+        padding-right: 0px !important;
+      }
+      .overflow::-webkit-scrollbar {
+   display: none !important;
+}
     }
   </style>
 </head>
@@ -134,8 +145,8 @@
 <body>
 
   <div>
-    <div class="container">
-      <div class=" mx-3">
+    <div class="container max-w" >
+      <div class="mobile-none mx-3">
         <div class="w-100">
           <header class="d-flex flex-wrap align-items-center justify-content-between justify-content-md-between py-2">
             <div class="col-md-3 mb-md-0 ">
@@ -195,20 +206,38 @@
           </header>
         </div>
       </div>
+      <div class="desktop-none py-2 d-flex justify-content-between align-items-center">
+            <div>
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                <path d="M15 18L9 12L15 6" stroke="#090A0A" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+            </div>
+            <div class="msg-font-6">
+              Booking
+            </div>
+            <div>drop-down</div>
+      </div>
     </div>
     <hr class="mt-0">
   </div>
 
-  <section class="container">
-    <div class="d-flex gap-2">
-      <div class="coll col-message-1 activeblu" onclick="showContent('content1')">All bookings</div>
-      <div class="coll col-message-1" onclick="showContent('content2')">Requests</div>
-      <div class="coll col-message-1" onclick="showContent('content3')">Checking out</div>
-      <div class="coll col-message-1" onclick="showContent('content4')">Currently hosting</div>
-      <div class="coll col-message-1" onclick="showContent('content5')">Upcoming </div>
-      <div class="coll col-message-1" onclick="showContent('content6')">Pending review</div>
-    </div>
+  <div class=" mobile-none container max-w">
+    <h1 class="offer-header-font-1">Booking</h1>
+  </div>
 
+  <br>
+  <div class="container max-w overflow" style="overflow-x: scroll;">
+  <div class="d-flex gap-2">
+    <div class="coll col-message-1 activeblu" onclick="showContent('content1')">All bookings</div>
+    <div class="coll col-message-1" onclick="showContent('content2')">Requests</div>
+    <div class="coll col-message-1" onclick="showContent('content3')">Checking out</div>
+    <div class="coll col-message-1" onclick="showContent('content4')">Currently hosting</div>
+    <div class="coll col-message-1" onclick="showContent('content5')">Upcoming </div>
+    <div class="coll col-message-1" onclick="showContent('content6')">Pending review</div>
+  </div>
+</div>
+
+  <section class="container max-w">
 
     <div class="mt-3">
 
