--- a/dashBoard/listingDetailsDashboard.html
+++ b/dashBoard/listingDetailsDashboard.html
@@ -157,7 +157,7 @@
   </div>
 
   <div class="container" style="max-width: 1550px;">
-    <div class="d-flex justify-content-between align-items-start">
+    <div class="d-flex justify-content-between align-items-start container">
       <div class="">
         <p class=" dashboard-font-5">A small room in denver</p>
         <div class="mb-0 pi-font-4 d-flex gap-1 align-items-center">
