--- a/dashBoard/booking.html
+++ b/dashBoard/booking.html
@@ -145,8 +145,8 @@
 <body>
 
   <div>
-    <div class="container max-w" >
-      <div class="mobile-none mx-3">
+    <div class="px-3">
+      <div class=" mx-3">
         <div class="w-100">
           <header class="d-flex flex-wrap align-items-center justify-content-between justify-content-md-between py-2">
             <div class="col-md-3 mb-md-0 ">
@@ -162,9 +162,10 @@
               <!--menu items-->
               <div class="d-flex gap-3 align-items-center">
                 <a href="dashboard.html" class="help-text mb-0 pb-1 link-not-active  " style="color: #444444;">Dashboard</a>
-                <a href="#" class="help-text mb-0 pb-1 link-not-active link-active" style="color: #444444;">Bookings</a>
+                <a href="booking.html" class="help-text mb-0 pb-1 link-not-active link-active"
+                  style="color: #444444;">Bookings</a>
                 <a href="#" class="help-text mb-0 pb-1 link-not-active" style="color: #444444;">Calendar</a>
-                <a href="#" class="help-text mb-0 pb-1 link-not-active" style="color: #444444;">Listings</a>
+                <a href="listingDashboard.html" class="help-text mb-0 pb-1 link-not-active" style="color: #444444;">Listings</a>
                 <a href="#" class="help-text mb-0 pb-1 link-not-active" style="color: #444444;">Inbox</a>
                 <div class="mobile-display-none" style="cursor: pointer;" onclick="toggleNotification()">
                   <svg class="not-selected" style="display: block;" xmlns="http://www.w3.org/2000/svg" width="18"
@@ -182,7 +183,7 @@
                 </div>
               </div>
 
-              <div class="dropdown">
+              <div class="dropdown ">
                 <button class=" d-flex gap-1 align-items-center  dropdown"
                   style="border: none; background-color: white;" type="button" data-bs-toggle="dropdown"
                   aria-expanded="false">
@@ -206,20 +207,11 @@
           </header>
         </div>
       </div>
-      <div class="desktop-none py-2 d-flex justify-content-between align-items-center">
-            <div>
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                <path d="M15 18L9 12L15 6" stroke="#090A0A" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-              </svg>
-            </div>
-            <div class="msg-font-6">
-              Booking
-            </div>
-            <div>drop-down</div>
-      </div>
     </div>
     <hr class="mt-0">
   </div>
+<div class="container" >
+
 
   <div class=" mobile-none container max-w">
     <h1 class="offer-header-font-1">Booking</h1>
@@ -354,7 +346,7 @@
     </div>
   </section>
 
-
+</div>
 
 
 
