--- a/dashBoard/booking.html
+++ b/dashBoard/booking.html
@@ -145,7 +145,7 @@
 <body>
 
   <div>
-    <div class="px-3">
+    <div class="container">
       <div class=" mx-3">
         <div class="w-100">
           <header class="d-flex flex-wrap align-items-center justify-content-between justify-content-md-between py-2">
@@ -161,11 +161,11 @@
        </ul> -->
               <!--menu items-->
               <div class="d-flex gap-3 align-items-center">
-                <a href="dashboard.html" class="help-text mb-0 pb-1 link-not-active  " style="color: #444444;">Dashboard</a>
+                <a href="#" class="help-text mb-0 pb-1 link-not-active  " style="color: #444444;">Dashboard</a>
                 <a href="booking.html" class="help-text mb-0 pb-1 link-not-active link-active"
                   style="color: #444444;">Bookings</a>
                 <a href="#" class="help-text mb-0 pb-1 link-not-active" style="color: #444444;">Calendar</a>
-                <a href="listingDashboard.html" class="help-text mb-0 pb-1 link-not-active" style="color: #444444;">Listings</a>
+                <a href="#" class="help-text mb-0 pb-1 link-not-active" style="color: #444444;">Listings</a>
                 <a href="#" class="help-text mb-0 pb-1 link-not-active" style="color: #444444;">Inbox</a>
                 <div class="mobile-display-none" style="cursor: pointer;" onclick="toggleNotification()">
                   <svg class="not-selected" style="display: block;" xmlns="http://www.w3.org/2000/svg" width="18"
@@ -199,7 +199,7 @@
                     <hr class="dropdown-divider">
                   </li>
                   <li><a class="dropdown-item header-dropdown-font-2" href="#">Search and traveling</a></li>
-                  <li><a class="dropdown-item header-dropdown-font-2" href="#">Loh Out</a></li>
+                  <li><a class="dropdown-item header-dropdown-font-2" href="#">Log Out</a></li>
                 </ul>
               </div>
             </div>
@@ -210,6 +210,7 @@
     </div>
     <hr class="mt-0">
   </div>
+
 <div class="container" >
 
 
