--- a/dashBoard/dashboard2.html
+++ b/dashBoard/dashboard2.html
@@ -16,6 +16,8 @@
   <link rel="stylesheet" href="../css/scrollbar.css">
   <link rel="stylesheet" href="../css/fonts.css">
   <link rel="stylesheet" href="../css/message.css">
+  <link rel="stylesheet" href="../css/dashboard.css">
+
   <link
     href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
     rel="stylesheet">
@@ -154,7 +156,8 @@
               <!--menu items-->
               <div class="d-flex gap-3 align-items-center">
                 <a href="#" class="help-text mb-0 pb-1 link-not-active  " style="color: #444444;">Dashboard</a>
-                <a href="booking.html" class="help-text mb-0 pb-1 link-not-active link-active" style="color: #444444;">Bookings</a>
+                <a href="booking.html" class="help-text mb-0 pb-1 link-not-active link-active"
+                  style="color: #444444;">Bookings</a>
                 <a href="#" class="help-text mb-0 pb-1 link-not-active" style="color: #444444;">Calendar</a>
                 <a href="#" class="help-text mb-0 pb-1 link-not-active" style="color: #444444;">Listings</a>
                 <a href="#" class="help-text mb-0 pb-1 link-not-active" style="color: #444444;">Inbox</a>
@@ -190,7 +193,7 @@
                     <hr class="dropdown-divider">
                   </li>
                   <li><a class="dropdown-item header-dropdown-font-2" href="#">Search and traveling</a></li>
-                  <li><a class="dropdown-item header-dropdown-font-2" href="#">Loh Out</a></li>
+                  <li><a class="dropdown-item header-dropdown-font-2" href="#">Log Out</a></li>
                 </ul>
               </div>
             </div>
@@ -213,99 +216,99 @@
           Calander</button>
       </div>
       <br>
+
       <div class="scroll-body-calander" style="overflow-x: scroll;">
+
         <div class=" d-flex dashboard-font-3 ">
+
           <div class="date-box date-box-active">
+            <div class="date-box-item">
+              <p class="mb-0">13</p>
+              <p class="mb-0">Today</p>
+            </div>
+            <div class="bookinsa-box-notification">
+              <p class="mb-0 n-1">M</p>
+              <p class="mb-0 n-2">+3</p>
+            </div>
+          </div>
+          <div class="date-box ">
+            <div class="date-box-item">
+              <p class="mb-0">13</p>
+              <p class="mb-0"></p>
+            </div>
+            <div class="bookinsa-box-notification">
+              <p class="mb-0 n-1">M</p>
+              <p class="mb-0 n-2">+3</p>
+            </div>
+          </div>
+          <div class="date-box ">
+            <div class="date-box-item">
+              <p class="mb-0">13</p>
+              <p class="mb-0"></p>
+            </div>
+            <div class="bookinsa-box-notification">
+              <p class="mb-0 n-1">M</p>
+              <p class="mb-0 n-2">+3</p>
+            </div>
+          </div>
+          <div class="date-box ">
+            <div class="date-box-item">
+              <p class="mb-0">13</p>
+              <p class="mb-0"></p>
+            </div>
+            <div class="bookinsa-box-notification">
+              <p class="mb-0 n-1">M</p>
+              <p class="mb-0 n-2">+3</p>
+            </div>
+          </div>
+          <div class="date-box ">
+            <div class="date-box-item">
+              <p class="mb-0">13</p>
+              <p class="mb-0"></p>
+            </div>
+            <div class="bookinsa-box-notification">
+              <p class="mb-0 n-1">M</p>
+              <p class="mb-0 n-2">+3</p>
+            </div>
+          </div>
+          <div class="date-box ">
+            <div class="date-box-item">
+              <p class="mb-0">13</p>
+              <p class="mb-0"></p>
+            </div>
+            <div class="bookinsa-box-notification">
+              <p class="mb-0 n-1">M</p>
+              <p class="mb-0 n-2">+3</p>
+            </div>
+          </div>
+          <div class="date-box ">
+            <div class="date-box-item">
+              <p class="mb-0">13</p>
+              <p class="mb-0"></p>
+            </div>
+            <div class="bookinsa-box-notification">
+              <p class="mb-0 n-1">M</p>
+              <p class="mb-0 n-2">+3</p>
+            </div>
+          </div>
+
+
+          <div class="date-box">
             <div class="d-flex w-100 justify-content-between ">
               <p class="mb-0">13</p>
               <p class="mb-0">today</p>
             </div>
             <div>No bookings</div>
           </div>
+
           <div class="date-box ">
-            <div class="date-box-item">
-              <p class="mb-0">12</p>
-              <p class="mb-0"></p>
-            </div>
-            <div>No bookings</div>
-          </div>
-          <div class="date-box ">
-            <div class="date-box-item">
+            <div class="d-flex w-100 justify-content-between ">
               <p class="mb-0">13</p>
-              <p class="mb-0"></p>
+              <p class="mb-0">today</p>
             </div>
             <div>No bookings</div>
           </div>
-          <div class="date-box ">
-            <div class="date-box-item">
-              <p class="mb-0">14</p>
-              <p class="mb-0"></p>
-            </div>
-            <div>No bookings</div>
-          </div>
-          <div class="date-box ">
-            <div class="date-box-item">
-              <p class="mb-0">15</p>
-              <p class="mb-0"></p>
-            </div>
-            <div>No bookings</div>
-          </div>
-          <div class="date-box ">
-            <div class="date-box-item">
-              <p class="mb-0">16</p>
-              <p class="mb-0"></p>
-            </div>
-            <div>No bookings</div>
-          </div>
-          <div class="date-box ">
-            <div class="date-box-item">
-              <p class="mb-0">17</p>
-              <p class="mb-0"></p>
-            </div>
-            <div>No bookings</div>
-          </div>
-          <div class="date-box ">
-            <div class="date-box-item">
-              <p class="mb-0">18</p>
-              <p class="mb-0"></p>
-            </div>
-            <div>No bookings</div>
-          </div>
-          <div class="date-box ">
-            <div class="date-box-item">
-              <p class="mb-0">19</p>
-              <p class="mb-0"></p>
-            </div>
-            <div>No bookings</div>
-          </div>
-          <div class="date-box ">
-            <div class="date-box-item">
-              <p class="mb-0">20</p>
-              <p class="mb-0"></p>
-            </div>
-            <div>No bookings</div>
-          </div>
-          <div class="date-box ">
-            <div class="date-box-item">
-              <p class="mb-0">21</p>
-              <p class="mb-0"></p>
-            </div>
-            <div>No bookings</div>
-          </div>
-          <div class="date-box ">
-            <div class="date-box-item">
-              <p class="mb-0">22</p>
-              <p class="mb-0"></p>
-            </div>
-            <div>No bookings</div>
-          </div>
-          <div class="date-box ">
-            <div class="date-box-item">
-              <p class="mb-0">23</p>
-              <p class="mb-0"></p>
-            </div>
-            <div>No bookings</div>
-          </div>
+
         </div>
       </div>
 
@@ -354,7 +357,7 @@
               <p class="personalinfor-header-1 mb-0">David Pam</p>
               <p class="details-header-font-4 mb-0">A small room in denver</p>
             </div>
-            <hr >
+            <hr>
             <div class="dashboard-item-bottom">Trip details</div>
           </div>
           <div class="dashboard-item">
@@ -364,7 +367,7 @@
               <p class="personalinfor-header-1 mb-0">Dimitri Stanic</p>
               <p class="details-header-font-4 mb-0">An apartment in texas</p>
             </div>
-            <hr >
+            <hr>
             <div class="dashboard-item-bottom">Trip details</div>
           </div>
 
@@ -375,14 +378,14 @@
               <p class="personalinfor-header-1 mb-0">Dimitri Stanic</p>
               <p class="details-header-font-4 mb-0">A beach house in Malibu</p>
             </div>
-            <hr >
+            <hr>
             <div class="dashboard-item-bottom">Trip details</div>
           </div>
 
         </div>
 
       </div>
-      
+
       <div id="content3" class=" content boxes ">3</div>
     </div>
   </section>
