--- a/dashBoard/pricingDashboard.html
+++ b/dashBoard/pricingDashboard.html
@@ -144,7 +144,7 @@
                     <hr class="dropdown-divider">
                   </li>
                   <li><a class="dropdown-item header-dropdown-font-2" href="#">Search and traveling</a></li>
-                  <li><a class="dropdown-item header-dropdown-font-2" href="#">Loh Out</a></li>
+                  <li><a class="dropdown-item header-dropdown-font-2" href="#">Log Out</a></li>
                 </ul>
               </div>
             </div>
@@ -463,7 +463,8 @@
   </div>
 
 
-  <script src="js/bootstrap.bundle.min.js"></script>
+
+  <script src="../js/bootstrap.bundle.min.js"></script>
   <script src="../script.js"></script>
   <script src="../js/jquery-3.7.1.js"></script>
   <script src="../js/headerFooter.js"></script>
