--- a/dashBoard/listingDashboard.html
+++ b/dashBoard/listingDashboard.html
@@ -70,7 +70,7 @@
 <body>
 
   <div>
-    <div class="px-3">
+    <div class="container">
       <div class=" mx-3">
         <div class="w-100">
           <header class="d-flex flex-wrap align-items-center justify-content-between justify-content-md-between py-2">
@@ -86,11 +86,12 @@
        </ul> -->
               <!--menu items-->
               <div class="d-flex gap-3 align-items-center">
-                <a href="dashboard.html" class="help-text mb-0 pb-1 link-not-active  " style="color: #444444;">Dashboard</a>
-                <a href="booking.html" class="help-text mb-0 pb-1 link-not-active " style="color: #444444;">Bookings</a>
+                <a href="#" class="help-text mb-0 pb-1 link-not-active  " style="color: #444444;">Dashboard</a>
+                <a href="booking.html" class="help-text mb-0 pb-1 link-not-active link-active"
+                  style="color: #444444;">Bookings</a>
                 <a href="#" class="help-text mb-0 pb-1 link-not-active" style="color: #444444;">Calendar</a>
-                <a href="listingDashboard.html" class="help-text mb-0 pb-1 link-not-active link-active" style="color: #444444;">Listings</a>
-                <a href="../message.html" class="help-text mb-0 pb-1 link-not-active" style="color: #444444;">Inbox</a>
+                <a href="#" class="help-text mb-0 pb-1 link-not-active" style="color: #444444;">Listings</a>
+                <a href="#" class="help-text mb-0 pb-1 link-not-active" style="color: #444444;">Inbox</a>
                 <div class="mobile-display-none" style="cursor: pointer;" onclick="toggleNotification()">
                   <svg class="not-selected" style="display: block;" xmlns="http://www.w3.org/2000/svg" width="18"
                     height="21" viewBox="0 0 18 21" fill="none">
@@ -107,7 +108,7 @@
                 </div>
               </div>
 
-              <div class="dropdown">
+              <div class="dropdown ">
                 <button class=" d-flex gap-1 align-items-center  dropdown"
                   style="border: none; background-color: white;" type="button" data-bs-toggle="dropdown"
                   aria-expanded="false">
@@ -123,7 +124,7 @@
                     <hr class="dropdown-divider">
                   </li>
                   <li><a class="dropdown-item header-dropdown-font-2" href="#">Search and traveling</a></li>
-                  <li><a class="dropdown-item header-dropdown-font-2" href="#">Loh Out</a></li>
+                  <li><a class="dropdown-item header-dropdown-font-2" href="#">Log Out</a></li>
                 </ul>
               </div>
             </div>
