--- a/index.html
+++ b/index.html
@@ -20,10 +20,18 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
   <style>
+
+    .review-card h3 {
+     font-size: 24px;
+    }
     @media (max-width:700px) {
       .drop-sticky {
         padding: 20px !important;
         border-radius: 1rem !important;
+      }
+      .review-card  {
+        margin-left: .5rem;
+        margin-right: -.5rem;
       }
     }
 
@@ -315,43 +323,6 @@
     <div class="container-xxl container-sm">
       <h3 class="mb-4">Find homes, rooms, or spaces shared by each other</h3>
 
-
-      <div class="filter-area d-flex">
-        <!-- <div class="filter-button">
-       <button type="button" class="btn btn-cd-secondary btn-pill">
-          Filter <i class="bi bi-filter"></i>
-        </button>
-      </div> -->
-
-        <div class="filter-menu">
-          <button type="button" class="btn btn-cd-light btn-pill active">
-            <i class="bi bi-power"></i> Entire Place
-          </button>
-          <button type="button" class="btn btn-cd-light btn-pill">
-            <i class="bi bi-power"></i> Entire Place
-          </button>
-          <button type="button" class="btn btn-cd-light btn-pill">
-            <i class="bi bi-power"></i> Entire Place
-          </button>
-          <button type="button" class="btn btn-cd-light btn-pill">
-            <i class="bi bi-power"></i> Entire Place
-          </button>
-          <button type="button" class="btn btn-cd-light btn-pill">
-            <i class="bi bi-power"></i> Entire Place
-          </button>
-          <button type="button" class="btn btn-cd-light btn-pill">
-            <i class="bi bi-power"></i> Entire Place
-          </button>
-          <button type="button" class="btn btn-cd-light btn-pill">
-            <i class="bi bi-power"></i> Entire Place
-          </button>
-
-
-
-
-
-        </div>
-      </div>
       <div class="row book-main">
 
 
