--- a/CellNotFound.html
+++ b/CellNotFound.html
@@ -124,9 +124,16 @@
                 <div class="    ">
                     <div class=" eligibleListContainer">
 
-                        <div class="mobile-show">
-                            <button class="" id="toggleLinkReverse">Back</button>
-                            Who can join?
+
+                        <div class="mobile-display-flex mb-5 ">
+                            <div class="" id="toggleLinkReverse">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                    <path d="M15 18L9 12L15 6" stroke="#090A0A" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                  </svg>
+                            </div>
+                            <p class="mx-auto mb-0 who-can-join">  
+                               Who can join?
+                            </p>
                         </div>
 
                         <div class="  logoContainer">
