--- a/HelpCenter.html
+++ b/HelpCenter.html
@@ -16,6 +16,16 @@
         href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <style>
+        @media (max-width:700px) {
+            .mb-mobile-none {
+                margin: 0 !important;
+            }
+            .TopHeaderText {
+                margin: 0;
+            }
+        }
+    </style>
 </head>
 
 <body>
