--- a/message.html
+++ b/message.html
@@ -460,7 +460,7 @@
 
             <hr>
 
-            <div class="d-flex justify-content-between container align-items-center">
+            <div class="d-flex justify-content-between  align-items-center">
               <div>
                 <p class="msg-side-font-4  mb-1">Check-in date</p>
                 <p class="msg-side-font-5 mb-0" style="line-height: 20px;">Mon, July 22</p>
