--- a/pinVerification.html
+++ b/pinVerification.html
@@ -107,29 +107,26 @@
                 </div>
             </div>
 
-            <div class="col-md-6 m-auto rightSideEligible" id="rightSideEligibleId">
-                <div class="cursor-pointer hidden position-absolute border "
-                    style="width: 30px; height: 30px; display: flex; background-color: white; top: 4%; right: 2%; border-radius: 50%;">
-                    <img src="img/cross.png" class="m-auto" alt="">
-                </div>
+            <div class="col-md-6 rightSideEligible " id="rightSideEligibleId">
                 <div class="    ">
                     <div class=" eligibleListContainer">
 
-                        <div class="mobile-view mb-3 border align-items-center justify-content-center "
-                            id="toggleLinkReverse"
-                            style="display: none; width: 50px; height: 50px; border-radius: 50%; cursor: pointer;">
 
-                            <i class="bi bi-arrow-left-short"></i>
-
+                        <div class="mobile-display-flex mb-5 ">
+                            <div class="" id="toggleLinkReverse">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                    <path d="M15 18L9 12L15 6" stroke="#090A0A" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                  </svg>
+                            </div>
+                            <p class="mx-auto mb-0 who-can-join">  
+                               Who can join?
+                            </p>
                         </div>
 
-
                         <div class="  logoContainer">
-
                             <img src="img/dog.png" alt="crewdogs" class="mb-4  ">
                             <img src="img/logo_text.png" alt="crewdogs" class="mb-4">
                         </div>
-
                         <h2>
                             Bringing the military <br />
                             community together
@@ -175,7 +172,6 @@
 
                 </div>
             </div>
-
         </div>
 
     </section>
