--- a/LoginPage.html
+++ b/LoginPage.html
@@ -382,11 +382,13 @@
                             We'll call or text you to confirm your number. Standard message and data rates apply.
                         </div>
 
-
-                        <a class=" canIjoinLink mobile-view-1 " style="text-align: center !important; display: none;"
-                            id="toggleLink">
-                            can I Join?
-                        </a>
+                          <div class="d-flex justify-content-center">
+                              
+                              <a class=" canIjoinLink mobile-view-1 " style="text-align: center !important; display: none;"
+                              id="toggleLink">
+                              can I Join?
+                            </a>
+                        </div>
 
                         <button class="btn btn-primary Continue-button " id="enterPhoneContinueButtonId">
                             Continue
@@ -472,22 +474,26 @@
 
 
 
-            <div class="col-md-6 m-auto rightSideEligible" id="rightSideEligibleId">
+            <div class="col-md-6 rightSideEligible " id="rightSideEligibleId">
                 <div class="    ">
                     <div class=" eligibleListContainer">
 
-                        <div class="">
-                            <button class="" id="toggleLinkReverse">Back</button>
-                            Who can join?
+
+                        <div class="mobile-display-flex mb-5 ">
+                            <div class="" id="toggleLinkReverse">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                    <path d="M15 18L9 12L15 6" stroke="#090A0A" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                  </svg>
+                            </div>
+                            <p class="mx-auto mb-0 who-can-join">  
+                               Who can join?
+                            </p>
                         </div>
 
-
                         <div class="  logoContainer">
-
                             <img src="img/dog.png" alt="crewdogs" class="mb-4  ">
                             <img src="img/logo_text.png" alt="crewdogs" class="mb-4">
                         </div>
-
                         <h2>
                             Bringing the military <br />
                             community together
