--- a/email.html
+++ b/email.html
@@ -63,6 +63,7 @@
                 </div>
 
 
+
                 <div class="container " style="margin-top: 0;" id="otpPageId">
                     <div class="text-center ">
 
@@ -113,29 +114,26 @@
                 </div>
             </div>
 
-            <div class="col-md-6 m-auto rightSideEligible" id="rightSideEligibleId">
-                <div class="cursor-pointer hidden position-absolute border p-2"
-                    style=" display: block; background-color: white; top: 4%; right: 2%; border-radius: 50%;">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14" fill="none">
-                        <path d="M1.16669 1.16407L12.8334 12.8307M1.16671 12.8307L7.00004 6.9974L12.8334 1.16406"
-                            stroke="#4B4B4D" stroke-width="1.5" stroke-linecap="round" />
-                    </svg>
-                </div>
-
+          <div class="col-md-6 rightSideEligible " id="rightSideEligibleId">
                 <div class="    ">
                     <div class=" eligibleListContainer">
 
-                        <span id="toggleLinkReverse"
-                            class="mobile-view border justify-content-center align-items-center mb-3 "
-                            style="border-radius: 50%; width: 30px; " id="toggleLinkReverse">
-                            <i class="bi bi-arrow-left-short"></i>
-                        </span>
-                        <div class="  logoContainer">
 
+                        <div class="mobile-display-flex mb-5 ">
+                            <div class="" id="toggleLinkReverse">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                    <path d="M15 18L9 12L15 6" stroke="#090A0A" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                  </svg>
+                            </div>
+                            <p class="mx-auto mb-0 who-can-join">  
+                               Who can join?
+                            </p>
+                        </div>
+
+                        <div class="  logoContainer">
                             <img src="img/dog.png" alt="crewdogs" class="mb-4  ">
                             <img src="img/logo_text.png" alt="crewdogs" class="mb-4">
                         </div>
-
                         <h2>
                             Bringing the military <br />
                             community together
