--- a/login.html
+++ b/login.html
@@ -476,26 +476,26 @@
 
 
 
-            <div class="col-md-6  rightSideEligible" style="min-height: 100vh;" id="rightSideEligibleId">
-                <div class="cursor-pointer hidden position-absolute border "
-                    style="width: 30px; height: 30px; display: flex; background-color: white; top: 4%; right: 2%; border-radius: 50%;">
-                    <img src="img/cross.png" class="m-auto" alt="">
-                </div>
+            <div class="col-md-6 rightSideEligible " id="rightSideEligibleId">
                 <div class="    ">
                     <div class=" eligibleListContainer">
 
-                        <span class="mobile-view border justify-content-center align-items-center mb-3 "
-                            style="border-radius: 50%; width: 30px; " id="toggleLinkReverse">
-                            <i class="bi bi-arrow-left-short"></i>
-                        </span>
 
+                        <div class="mobile-display-flex mb-5 ">
+                            <div class="" id="toggleLinkReverse">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                    <path d="M15 18L9 12L15 6" stroke="#090A0A" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                  </svg>
+                            </div>
+                            <p class="mx-auto mb-0 who-can-join">  
+                               Who can join?
+                            </p>
+                        </div>
 
                         <div class="  logoContainer">
-
                             <img src="img/dog.png" alt="crewdogs" class="mb-4  ">
                             <img src="img/logo_text.png" alt="crewdogs" class="mb-4">
                         </div>
-
                         <h2>
                             Bringing the military <br />
                             community together
