--- a/header-home.html
+++ b/header-home.html
@@ -5,7 +5,7 @@
   <div >
     <div class=" margin-auto " >
       <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none" >
-        <img src="img/logo.png"  alt="">
+        <img src="img/logo.svg"  alt="">
       </a>
     </div>
   </div>
